--- a/criminal_defenders_ver4_1/about.html
+++ b/criminal_defenders_ver4_1/about.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="container clearfix gen">
-            <div class="col-sm-3 col-sm-offset-1">
+            <div class="col-sm-3 custom_margin_about_gen" >
                 <a href="command.html">
                     Команда </a>
                 
